GNUSim8085 1.4.2 (UNRELEASED)

## New
 - #27 - Allow to load data in memory in hexadecimal format
 - #31 - Fully switch to meson build

## Note to packagers:
         The application can now be built using meson build system.
         If you see any issues building with meson please report them on our
         issue tracker.
         If you still want to use autotools based build then you will need to
         generate necessary files using autogen.sh.
         Dependencies:
         New - meson >= 0.37.0

GNUSim8085 1.4.1 (31 Jul 2018)

New:     The application has been ported to GTK3. There is no major functional
         difference compared to previous versions. But using GTK3 should allow
         us to use newer design practices like header bar in future.
New:     LP: #1322687 - Please create an AppData file
         This allows more information to be displayed in software centre
         applications.
Fix:     Printing fix for Windows

Translations:
         New - Dutch (nl), Japanese (ja), Lithuanian (lt), Marathi (mr),
         Russian (ru), Thai (th).
         Updated - Arabic (ar), French (fr), German (de), Greek (el),
         Kannada (kn), Spanish (es), Tamil (ta).
Note to packagers:
         The application is now built using GTK3 APIs.
         Dependencies:
         New - GTK+ >= 3.10.0, GtkSourceView >= 3.10.0,
               markdown (discount or similar package that provides markdown
               binary)

GNUSim8085 1.3.7 (20 Feb 2011)

New:     LP: #579341 - Editable memory listing as a tab.
         This allows easy viewing/editing of memory contents in a table. The
         table is shown in a tab similar to Data/Stack content shown currently.
New:     LP: #579324 - Memory/IO Ports Grid Inspector
         This allows easy viewing/editing of I/O contents in a table. The table
         is shown in a tab similar to Data/Stack content shown currently.
New:     Files opened/saved are added to recently used file list using